верстка макету барбершоп

--- a/index.html
+++ b/index.html
@@ -1,12 +1,182 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BarberShop</title>
 </head>
 <body>
-    
+    <header> 
+        <a href="">
+            <img src="./images/logo.svg" alt="Логотип">
+        </a>
+        <nav>
+        <ul>
+            <li><a href="">Про нас</a></li>
+            <li><a href="">Полуги та ціни</a></li>
+            <li><a href="">Майстри</a></li>
+            <li><a href="">Контакти</a></li>
+        </ul>
+        </nav>
+        <a href="tel:+380441111111">+38 044 111 11 11</a>
+        <button type="button">онлайн-запис</button>
+    </header>
+    <main>
+        <section>
+            <ul>
+                <li><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+                <li><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+            </ul>
+        <p lang="en">A hair salon for men in Kyiv</p>
+        <h1 lang="en">BarberShop</h1>
+        <p>Ми експерти в модних чоловічих стрижках. Працюємо швидко, обережно та зі смаком</p>
+        </section>
+
+        <section>
+            <ul>
+                <li><img src="./images/img 1.jpg" alt="стрижка бороди" width="270"></li>
+                <li><img src="./images/img 2.jpg" alt="стрижка голови" width="270"></li>
+            </ul>
+            <p>Про нас</p>
+            <h2>Кращий барбершоп твого міста</h2>
+            <p>Якщо ти хочеш додати у свій образ більше впевненості, тобі точно до нас.</p>
+            <p>Ми команда, яка ніколи не зупиняється на досягнутому
+               і прагне змін. І коли ти потрапиш до рук нашого майстра,
+               то вже ніколи не зможеш бути тим самим. Ми команда, яка завжди з клієнтами "на одній хвилі". Тому ми завжди готові
+               вдосконалити кожного, хто до нас приходить!
+            </p>
+          <button type="button">онлайн-запис</button>
+        </section>
+
+        <section>
+            <p>Проведи час у компанії кращих майстрів</p>
+            <h2>Послуги та ціни</h2>
+            <ul>
+                <li>
+                    <p>Чоловіча стрижка</p>
+                    <p>від 300 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка бороди</p>
+                    <p>від 200 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка вусів</p>
+                    <p>від 200 грн.</p>
+                </li>
+                <li>
+                    <p>Гоління небезпечною бритвою</p>
+                    <p>від 200 грн.</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <p>Стрижка у стажера</p>
+                    <p>від 50 грн.</p>
+                </li>
+                <li>
+                    <p>Стрижка під насадку</p>
+                    <p>від 200 грн.</p>
+                </li>
+                <li>
+                    <p>Дитяча стрижка (до 12 років)</p>
+                    <p>від 300 грн.</p>
+                </li>
+                <li>
+                    <p>Камуфлювання сивини</p>
+                    <p>від 200 грн.</p>
+                </li>
+            </ul>
+          <button type="button">онлайн-запис</button>
+        </section>
+
+        <section>
+            <ul>
+                <li>
+                    <span>600</span>
+                    <p>Задоволених клієнтів на день</p>
+                </li>
+                <li>
+                    <span>50</span>
+                    <p>Нагород за відмінний сервіс</p>
+                </li>
+                <li>
+                    <span>20</span>
+                    <p>Найкращих майстрів Києва</p>
+                </li>
+                <li>
+                    <span>100</span>
+                    <p>Подарунків постійним клієнтам</p>
+                </li>
+            </ul>
+            <p>стара традиційна школа</p>
+            <h2>Чому приходять саме до нас?</h2>
+            <p>Про нас говорять лише добре. Але краще 1 раз побачити та відчути, ніж 10 разів прочитати.</p>
+        </section>
+
+        <section>
+            <p>для справжніх поціновувачів атмосфери</p>
+            <h2>Наші майстри</h2>
+            <ul>
+                <li>
+                    <img src="./images/img-john (1).jpg" alt="майстер стриже клієнта" 
+                    width="370" height="346">
+                    <h3 lang="en">John Smith</h3>
+                    <p lang="en">Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./images/img-michele.jpg" alt="майстер стриже клієнта" 
+                    width="370" height="346">
+                    <h3 lang="en">Michele Doe</h3>
+                    <p lang="en">Extreme Barber</p>
+                </li>
+                <li>
+                    <img src="./images/img-alan (1).jpg" alt="майстер стриже клієнта" 
+                    width="370" height="346">
+                    <h3 lang="en">Alan Black</h3>
+                    <p lang="en">Extreme Barber</p>
+                </li>
+            </ul>
+         </section>
+
+         <section>
+            <p>Латинською мовою "барба" означає "борода"</p>
+            <h2>Колаж робіт</h2>
+            <ul>
+                <li><img src="./images/photo-collage1.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+                <li><img src="./images/photo-collage2.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+                <li><img src="./images/photo-collage3.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+                <li><img src="./images/photo-collage4.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Контакти</h2>
+            <address>
+                <ul>
+                    <li><a href="https://goo.gl/maps/4biV4YEMLsBbstiQA" target="_blank" rel="noopener noreferrer nofollow">вул. Васильківська, 7А
+                    Київ, 08132</a></li>
+                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                </ul>
+                
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.430682423617!2d30.503601699999997!3d50.395810700000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8c951889799%3A0x58e0259a6e5b738d!2z0LLRg9C70LjRhtGPINCS0LDRgdC40LvRjNC60ZbQstGB0YzQutCwLCA3LCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1675711239871!5m2!1suk!2sua"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </address>
+            <p>час роботи</p>
+            <p>Щоденно з 9:00 до 22:00</p>
+        </section>
+    </main>
+    <footer>
+        <p>&#169;Copyright 2020</p>
+        <ul>
+            <li><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
