--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
                     <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
                 
-                <iframe
+                <!-- <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2543.430682423617!2d30.503601699999997!3d50.395810700000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4c8c951889799%3A0x58e0259a6e5b738d!2z0LLRg9C70LjRhtGPINCS0LDRgdC40LvRjNC60ZbQstGB0YzQutCwLCA3LCDQmtC40ZfQsiwgMDIwMDA!5e0!3m2!1suk!2sua!4v1675711239871!5m2!1suk!2sua"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                </iframe> -->
             </address>
             <p>час роботи</p>
             <p>Щоденно з 9:00 до 22:00</p>
