--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -35,8 +35,8 @@
 
         <section>
             <ul>
-                <li><img src="./images/img 1.jpg" alt="стрижка бороди" width="270"></li>
-                <li><img src="./images/img 2.jpg" alt="стрижка голови" width="270"></li>
+                <li><img src="./images/img-1.jpg" alt="стрижка бороди" width="270"></li>
+                <li><img src="./images/img-2.jpg" alt="стрижка голови" width="270"></li>
             </ul>
             <p>Про нас</p>
             <h2>Кращий барбершоп твого міста</h2>
@@ -120,7 +120,7 @@
             <h2>Наші майстри</h2>
             <ul>
                 <li>
-                    <img src="./images/img-john (1).jpg" alt="майстер стриже клієнта" 
+                    <img src="./images/img-john.jpg" alt="майстер стриже клієнта" 
                     width="370" height="346">
                     <h3 lang="en">John Smith</h3>
                     <p lang="en">Extreme Barber</p>
@@ -132,7 +132,7 @@
                     <p lang="en">Extreme Barber</p>
                 </li>
                 <li>
-                    <img src="./images/img-alan (1).jpg" alt="майстер стриже клієнта" 
+                    <img src="./images/img-alan.jpg" alt="майстер стриже клієнта" 
                     width="370" height="346">
                     <h3 lang="en">Alan Black</h3>
                     <p lang="en">Extreme Barber</p>
