додавання класів в секції мастер, портфоліо, контакти

--- a/index.html
+++ b/index.html
@@ -122,50 +122,50 @@
             <p class="features-description">Про нас говорять лише добре. Але краще 1 раз побачити та відчути, ніж 10 разів прочитати.</p>
         </section>
 
-        <section id="masters">
-            <p>для справжніх поціновувачів атмосфери</p>
-            <h2>Наші майстри</h2>
-            <ul>
-                <li>
+        <section id="masters" class="masters">
+            <p class="masters-text">для справжніх поціновувачів атмосфери</p>
+            <h2 class="masters-title">Наші майстри</h2>
+            <ul class="masters-list">
+                <li class="masters-item">
                     <img src="./images/img-john.jpg" alt="майстер стриже клієнта" 
                     width="370" height="346">
-                    <h3 lang="en">John Smith</h3>
-                    <p lang="en">Extreme Barber</p>
+                    <h3 lang="en" class="masters-item-title">John Smith</h3>
+                    <p lang="en" class="masters-item-text">Extreme Barber</p>
                 </li>
-                <li>
+                <li class="masters-item">
                     <img src="./images/img-michele.jpg" alt="майстер стриже клієнта" 
                     width="370" height="346">
-                    <h3 lang="en">Michele Doe</h3>
-                    <p lang="en">Extreme Barber</p>
+                    <h3 lang="en"class="masters-item-title">Michele Doe</h3>
+                    <p lang="en" class="masters-item-text">Extreme Barber</p>
                 </li>
-                <li>
+                <li class="masters-item">
                     <img src="./images/img-alan.jpg" alt="майстер стриже клієнта" 
                     width="370" height="346">
-                    <h3 lang="en">Alan Black</h3>
-                    <p lang="en">Extreme Barber</p>
+                    <h3 lang="en"class="masters-item-title">Alan Black</h3>
+                    <p lang="en" class="masters-item-text">Extreme Barber</p>
                 </li>
             </ul>
          </section>
 
-         <section>
-            <p>Латинською мовою "барба" означає "борода"</p>
-            <h2>Колаж робіт</h2>
-            <ul>
-                <li><img src="./images/photo-collage1.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
-                <li><img src="./images/photo-collage2.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
-                <li><img src="./images/photo-collage3.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
-                <li><img src="./images/photo-collage4.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+         <section class="portfolio">
+            <p class="portfolio-text">Латинською мовою "барба" означає "борода"</p>
+            <h2 class="portfolio-title">Колаж робіт</h2>
+            <ul class="portfolio-list">
+                <li class="portfolio-item"><img src="./images/photo-collage1.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+                <li class="portfolio-item"><img src="./images/photo-collage2.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+                <li class="portfolio-item"><img src="./images/photo-collage3.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
+                <li class="portfolio-item"><img src="./images/photo-collage4.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
             </ul>
         </section>
 
-        <section id="contacts">
-            <h2>Контакти</h2>
-            <address>
-                <ul>
-                    <li><a href="https://goo.gl/maps/4biV4YEMLsBbstiQA" target="_blank" rel="noopener noreferrer nofollow">вул. Васильківська, 7А
+        <section id="contacts" class="contacts">
+            <h2 class="contacts-title">Контакти</h2>
+            <address class="contacts-address">
+                <ul class="contacts-list">
+                    <li class="contacts-item"><a class="contacts-link" href="https://goo.gl/maps/4biV4YEMLsBbstiQA" target="_blank" rel="noopener noreferrer nofollow">вул. Васильківська, 7А
                     Київ, 08132</a></li>
-                    <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-                    <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                    <li class="contacts-item"><a class="contacts-link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li class="contacts-item"><a class="contacts-link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
                 
                 <!-- <iframe
@@ -174,15 +174,15 @@
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe> -->
             </address>
-            <p>час роботи</p>
-            <p>Щоденно з 9:00 до 22:00</p>
+            <p class="contacts-text">час роботи</p>
+            <p class="contacts-time">Щоденно з 9:00 до 22:00</p>
         </section>
     </main>
-    <footer>
-        <p>&#169;Copyright 2020</p>
-        <ul>
-            <li><a href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li><a href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+    <footer class="footer">
+        <p class="footer-text">&#169;Copyright 2020</p>
+        <ul class="footer-list">
+            <li class="footer-item"><a class="footer-link" href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li class="footer-item"><a class="footer-link" href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
         </ul>
     </footer>
 </body>
