--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <a href="" class="header-logo">
             <img src="./images/logo.svg" alt="Логотип">
         </a>
-        <nav class="header-navigation">
-        <ul class="header-list">
-            <li class="header-item"><a href="" class="header-link">Про нас</a></li>
-            <li class="header-item"><a href="#price" class="header-link">Полуги та ціни</a></li>
-            <li class="header-item"><a href="#masters" class="header-link">Майстри</a></li>
-            <li class="header-item"><a href="#contacts" class="header-link">Контакти</a></li>
+        <nav class="header-nav">
+        <ul class="header-nav-list list">
+            <li class="header-nav-item"><a href="#about" class="header-nav-link link">Про нас</a></li>
+            <li class="header-nav-item"><a href="#price" class="header-nav-link link">Полуги та ціни</a></li>
+            <li class="header-nav-item"><a href="#masters" class="header-nav-link link">Майстри</a></li>
+            <li class="header-nav-item"><a href="#contacts" class="header-nav-link link">Контакти</a></li>
         </ul>
         </nav>
         <a href="tel:+380441111111" class="header-tel">+38 044 111 11 11</a>
@@ -35,12 +35,14 @@
                 <li class="hero-item"><a href="" class="hero-link" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
                 <li class="hero-item"><a href="" class="hero-link" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
             </ul>
-        <p class="hero-top-text" lang="en">A hair salon for men in Kyiv</p>
+     <div class="hero-content">
+        <p class="hero-content-text" lang="en">A hair salon for men in Kyiv</p>
         <h1 class="hero-title" lang="en">BarberShop</h1>
         <p class="hero-text">Ми експерти в модних чоловічих стрижках. Працюємо швидко, обережно та зі смаком</p>
+    </div>
         </section>
 
-        <section class="about">
+        <section id="about" class="about">
             <ul class="about-list">
                 <li class="about-item"><img src="./images/img-1.jpg" alt="стрижка бороди" width="270"></li>
                 <li class="about-item"><img src="./images/img-2.jpg" alt="стрижка голови" width="270"></li>
@@ -149,7 +151,7 @@
 
          <section class="portfolio">
             <p class="portfolio-text">Латинською мовою "барба" означає "борода"</p>
-            <h2 class="portfolio-title">Колаж робіт</h2>
+            <h2 class="portfolio-title visually-hidden">Колаж робіт</h2>
             <ul class="portfolio-list">
                 <li class="portfolio-item"><img src="./images/photo-collage1.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
                 <li class="portfolio-item"><img src="./images/photo-collage2.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
