--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </header>
     <main>
         <section class="hero">
-            <ul class="hero-list">
-                <li class="hero-item"><a href="" class="hero-link" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-                <li class="hero-item"><a href="" class="hero-link" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+            <ul class="hero-list list">
+                <li class="hero-item"><a href="" class="hero-link link" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+                <li class="hero-item"><a href="" class="hero-link link" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
             </ul>
      <div class="hero-content">
         <p class="hero-content-text" lang="en">A hair salon for men in Kyiv</p>
@@ -43,12 +43,12 @@
         </section>
 
         <section id="about" class="about">
-            <ul class="about-list">
+            <ul class="about-list list">
                 <li class="about-item"><img src="./images/img-1.jpg" alt="стрижка бороди" width="270"></li>
                 <li class="about-item"><img src="./images/img-2.jpg" alt="стрижка голови" width="270"></li>
             </ul>
             <p class="about-top-text">Про нас</p>
-            <h2 class="about-title">Кращий барбершоп твого міста</h2>
+            <h2 class="about-title">Кращий Барбершоп твого міста</h2>
             <p class="about-text">Якщо ти хочеш додати у свій образ більше впевненості, тобі точно до нас.</p>
             <p class="about-us">Ми команда, яка ніколи не зупиняється на досягнутому
                і прагне змін. І коли ти потрапиш до рук нашого майстра,
@@ -61,7 +61,7 @@
         <section id="price" class="price">
             <p class="price-text">Проведи час у компанії кращих майстрів</p>
             <h2 class="price-title">Послуги та ціни</h2>
-            <ul class="price-list">
+            <ul class="price-list list">
                 <li class="price-item">
                     <p class="price-item__text">Чоловіча стрижка</p>
                     <p class="price-item__sum">від 300 грн.</p>
@@ -79,7 +79,7 @@
                     <p class="price-item__sum">від 200 грн.</p>
                 </li>
             </ul>
-            <ul class="price-list">
+            <ul class="price-list list">
                 <li>
                     <p class="price-item__text">Стрижка у стажера</p>
                     <p class="price-item__sum">від 50 грн.</p>
