--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </section>
 
         <section class="features">
-            <ul class="features-list">
+            <ul class="features-list list">
                 <li class="features-item">
                     <span class="features-client">600</span>
                     <p class="features-text">Задоволених клієнтів на день</p>
@@ -127,7 +127,7 @@
         <section id="masters" class="masters">
             <p class="masters-text">для справжніх поціновувачів атмосфери</p>
             <h2 class="masters-title">Наші майстри</h2>
-            <ul class="masters-list">
+            <ul class="masters-list list">
                 <li class="masters-item">
                     <img src="./images/img-john.jpg" alt="майстер стриже клієнта" 
                     width="370" height="346">
@@ -152,7 +152,7 @@
          <section class="portfolio">
             <p class="portfolio-text">Латинською мовою "барба" означає "борода"</p>
             <h2 class="portfolio-title visually-hidden">Колаж робіт</h2>
-            <ul class="portfolio-list">
+            <ul class="portfolio-list list">
                 <li class="portfolio-item"><img src="./images/photo-collage1.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
                 <li class="portfolio-item"><img src="./images/photo-collage2.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
                 <li class="portfolio-item"><img src="./images/photo-collage3.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
@@ -163,11 +163,11 @@
         <section id="contacts" class="contacts">
             <h2 class="contacts-title">Контакти</h2>
             <address class="contacts-address">
-                <ul class="contacts-list">
-                    <li class="contacts-item"><a class="contacts-link" href="https://goo.gl/maps/4biV4YEMLsBbstiQA" target="_blank" rel="noopener noreferrer nofollow">вул. Васильківська, 7А
+                <ul class="contacts-list list">
+                    <li class="contacts-item link"><a class="contacts-link" href="https://goo.gl/maps/4biV4YEMLsBbstiQA" target="_blank" rel="noopener noreferrer nofollow">вул. Васильківська, 7А
                     Київ, 08132</a></li>
-                    <li class="contacts-item"><a class="contacts-link" href="tel:+380441111111">+38 044 111 11 11</a></li>
-                    <li class="contacts-item"><a class="contacts-link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                    <li class="contacts-item link"><a class="contacts-link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                    <li class="contacts-item link"><a class="contacts-link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                 </ul>
                 
                 <!-- <iframe
@@ -182,9 +182,9 @@
     </main>
     <footer class="footer">
         <p class="footer-text">&#169;Copyright 2020</p>
-        <ul class="footer-list">
-            <li class="footer-item"><a class="footer-link" href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
-            <li class="footer-item"><a class="footer-link" href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
+        <ul class="footer-list list">
+            <li class="footer-item"><a class="footer-link link" href="" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
+            <li class="footer-item"><a class="footer-link link" href="" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
         </ul>
     </footer>
 </body>
