додано контейнер, відступи між елементами

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     
 </head>
 <body>
-    <header class="header"> 
+    <header class="header">
+        <div class="container">
         <a href="" class="header-logo">
             <img src="./images/logo.svg" alt="Логотип">
         </a>
@@ -32,9 +33,11 @@
         </nav>
         <a href="tel:+380441111111" class="header-tel">+38 044 111 11 11</a>
         <button type="button" class="header-button">онлайн-запис</button>
+        </div>
     </header>
     <main>
         <section class="hero">
+            <div class="container">
             <ul class="hero-list list">
                 <li class="hero-item"><a href="" class="hero-link link" target="_blank" rel="noopener noreferrer nofollow">Instagram</a></li>
                 <li class="hero-item"><a href="" class="hero-link link" target="_blank" rel="noopener noreferrer nofollow">Youtube</a></li>
@@ -44,9 +47,11 @@
         <h1 class="hero-title" lang="en">BarberShop</h1>
         <p class="hero-text">Ми експерти в модних чоловічих стрижках. Працюємо швидко, обережно та зі смаком</p>
     </div>
+    </div>
         </section>
 
         <section id="about" class="about">
+            <div class="container">
             <ul class="about-list list">
                 <li class="about-item"><img src="./images/img-1.jpg" alt="стрижка бороди" width="270"></li>
                 <li class="about-item"><img src="./images/img-2.jpg" alt="стрижка голови" width="270"></li>
@@ -60,9 +65,11 @@
                вдосконалити кожного, хто до нас приходить!
             </p>
           <button type="button" class="about-button">онлайн-запис</button>
+        </div>
         </section>
 
         <section id="price" class="price">
+            <div class="container">
             <p class="price-text">Проведи час у компанії кращих майстрів</p>
             <h2 class="price-title">Послуги та ціни</h2>
             <ul class="price-list list">
@@ -70,41 +77,43 @@
                     <p class="price-item__text">Чоловіча стрижка</p>
                     <p class="price-item__sum">від 300 грн.</p>
                 </li>
-                <li>
+                <li class="price-item">
                     <p class="price-item__text">Стрижка бороди</p>
                     <p class="price-item__sum">від 200 грн.</p>
                 </li>
-                <li>
+                <li class="price-item">
                     <p class="price-item__text">Стрижка вусів</p>
                     <p class="price-item__sum">від 200 грн.</p>
                 </li>
-                <li>
+                <li class="price-item">
                     <p class="price-item__text">Гоління небезпечною бритвою</p>
                     <p class="price-item__sum">від 200 грн.</p>
                 </li>
             </ul>
             <ul class="price-list list">
-                <li>
+                <li class="price-item">
                     <p class="price-item__text">Стрижка у стажера</p>
                     <p class="price-item__sum">від 50 грн.</p>
                 </li>
-                <li>
+                <li class="price-item">
                     <p class="price-item__text">Стрижка під насадку</p>
                     <p class="price-item__sum">від 200 грн.</p>
                 </li>
-                <li>
+                <li class="price-item">
                     <p class="price-item__text">Дитяча стрижка (до 12 років)</p>
                     <p class="price-item__sum">від 300 грн.</p>
                 </li>
-                <li>
+                <li class="price-item">
                     <p class="price-item__text">Камуфлювання сивини</p>
                     <p class="price-item__sum">від 200 грн.</p>
                 </li>
             </ul>
           <button type="button" class="price-button">онлайн-запис</button>
+        </div>
         </section>
 
         <section class="features">
+            <div class="container">
             <ul class="features-list list">
                 <li class="features-item">
                     <span class="features-client">600</span>
@@ -126,34 +135,38 @@
             <p class="features-top-text">стара традиційна школа</p>
             <h2 class="features-title">Чому приходять саме до нас?</h2>
             <p class="features-description">Про нас говорять лише добре. Але краще 1 раз побачити та відчути, ніж 10 разів прочитати.</p>
+            </div>
         </section>
 
         <section id="masters" class="masters">
+            <div class="container">
             <p class="masters-text">для справжніх поціновувачів атмосфери</p>
             <h2 class="masters-title">Наші майстри</h2>
             <ul class="masters-list list">
                 <li class="masters-item">
                     <img src="./images/img-john.jpg" alt="майстер стриже клієнта" 
-                    width="370" height="346">
+                    width="370" height="346" class="masters-img">
                     <h3 lang="en" class="masters-item-title">John Smith</h3>
                     <p lang="en" class="masters-item-text">Extreme Barber</p>
                 </li>
                 <li class="masters-item">
                     <img src="./images/img-michele.jpg" alt="майстер стриже клієнта" 
-                    width="370" height="346">
+                    width="370" height="346" class="masters-img">
                     <h3 lang="en"class="masters-item-title">Michele Doe</h3>
                     <p lang="en" class="masters-item-text">Extreme Barber</p>
                 </li>
                 <li class="masters-item">
                     <img src="./images/img-alan.jpg" alt="майстер стриже клієнта" 
-                    width="370" height="346">
+                    width="370" height="346" class="masters-img">
                     <h3 lang="en"class="masters-item-title">Alan Black</h3>
                     <p lang="en" class="masters-item-text">Extreme Barber</p>
                 </li>
             </ul>
+            </div>
          </section>
 
          <section class="portfolio">
+            <div class="container">
             <p class="portfolio-text">Латинською мовою "барба" означає "борода"</p>
             <h2 class="portfolio-title visually-hidden">Колаж робіт</h2>
             <ul class="portfolio-list list">
@@ -162,9 +175,11 @@
                 <li class="portfolio-item"><img src="./images/photo-collage3.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
                 <li class="portfolio-item"><img src="./images/photo-collage4.jpg" alt="майстер стриже клієнта" width="270" height="360"></li>
             </ul>
+            </div>
         </section>
 
         <section id="contacts" class="contacts">
+            <div class="container">
             <h2 class="contacts-title">Контакти</h2>
             <address class="contacts-address">
                 <ul class="contacts-list list">
@@ -182,6 +197,7 @@
             </address>
             <p class="contacts-text">час роботи</p>
             <p class="contacts-time">Щоденно з 9:00 до 22:00</p>
+            </div>
         </section>
     </main>
     <footer class="footer">
